--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,16 @@
   box-sizing: border-box;
   list-style: none;
 }
-
+a{
+  color: blue;
+}
+a:hover{
+  color: green;
+  cursor: pointer;
+}
+p{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 :root {
   --color-primary: #191d2b;
   --color-secondary: #27ae60;
